overlays/base/exoplanets/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: exoplanets-app
  name: exoplanets-app
spec:
  selector:
    matchLabels:
      app: exoplanets-app
  template:
    metadata:
      labels:
        app: exoplanets-app
      name: exoplanets-app
    spec:
      serviceAccountName: useroot
      containers:
        - name: exoplanets-app
          image: quay.io/klaj2210/exoplanets:v2
          ports:
          - containerPort: 8080
            name: exoplanets-app
